--- a/react-frontend/src/components/Style.css
+++ b/react-frontend/src/components/Style.css
@@ -1,3 +1,7 @@
+.info-border {
+    border: 1px solid #17A2B8 !important;
+}
+
 .page-num {
     width: 45px !important;
     border: 1px solid #17A2B8 !important;
